--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sibo Wang
 logo: /assets/img/profile.jpg
 show_downloads: false
-description: "[firstname].[lastname]@epfl.ch"
+description: "**Work:** sibo DOT wang AT epfl DOT ch<br>**Personal:** wangchensibo AT gmail DOT com"
 google_analytics: G-SD641HJRFZ
 github:
   is_project_page: false
