--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sibo Wang
 logo: /assets/img/profile.jpg
 show_downloads: false
-description: "<b>Work:</b> sibo DOT wang AT epfl DOT ch<br><b>Personal:</b> wangchensibo AT gmail DOT com"
+description: "[firstname].[lastname]@epfl.ch"
 google_analytics: G-SD641HJRFZ
 github:
   is_project_page: false
