--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sibo Wang
+title: Sibo Wang-Chen
 logo: /assets/img/profile.jpg
 show_downloads: false
 description: "[firstname].[lastname]@epfl.ch"
