--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sibo Wang-Chen
 logo: /assets/img/profile.jpg
 show_downloads: false
-description: "sibo.wang -at- epfl -dot- ch"
+description: "[Contact info](https://people.epfl.ch/sibo.wang?lang=en)"
 google_analytics: G-SD641HJRFZ
 github:
   is_project_page: false
