--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sibo Wang-Chen
 logo: /assets/img/profile.jpg
 show_downloads: false
-description: "[Contact info](https://people.epfl.ch/sibo.wang?lang=en)"
+description: "<a href="https://people.epfl.ch/sibo.wang?lang=en">Contact info</a>"
 google_analytics: G-SD641HJRFZ
 github:
   is_project_page: false
